force-app/main/default/objects/Survey_Asset_Delete__c/Survey_Asset_Delete__c.object-meta.xml
<CustomObject>
    <description>Tracks deletes of Survey Asset Location records.</description>
    <label>Survey Asset Delete</label>
    <nameField>
        <displayFormat>SAD{0000}</displayFormat>
        <label>Survey Asset Delete Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Asset Deletes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>