force-app/main/default/objects/Survey_Asset_Delete__c/fields/Deleted_By__c.field-meta.xml
<CustomField>
    <fullName>Deleted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deleted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Survey_Asset_Deletes</relationshipName>
    <type>Lookup</type>
</CustomField>