force-app/main/default/objects/Survey_Asset_Delete__c/fields/Deletion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Reason__c</fullName>
    <label>Deletion Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Deleted</fullName>
            </value>
            <value>
                <fullName>Opportunity Line Item Deleted</fullName>
            </value>
            <value>
                <fullName>Opportunity Line Item Quantity Reduced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>