force-app/main/default/objects/Survey_Asset_Delete__c/fields/Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Survey</label>
    <referenceTo>Site_Survey__c</referenceTo>
    <relationshipLabel>Survey Asset Deletes</relationshipLabel>
    <relationshipName>Survey_Asset_Deletes</relationshipName>
    <type>Lookup</type>
</CustomField>