force-app/main/default/objects/Survey_Asset_Delete__c/fields/Survey_Asset_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Survey_Asset_Location_Id__c</fullName>
    <label>Survey Asset Location Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>